[metadata]
name = powertape
summary = PowerTape is an empty Python package
description-file =
    README.rst
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
home-page = https://github.com/pycontribs/powertape
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[pbr]
warnerrors = True

[wheel]
universal = 1
